Refactor `TaintAnalysisState` and `TaintAnalysisTransferRelation` to replace unnecessary `LinkedList` usage with direct access methods, improving clarity and performance.
The reason for use of LinkedList was to complain with some CI checks. The use of this generated new complains from the build checks. The use of the LinkedList is with this commit reverted.